--- a/client/package.json
+++ b/client/package.json
@@ -3,39 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.3",
-    "@mui/lab": "^5.0.0-alpha.85",
-    "@mui/material": "^5.8.6",
-    "@mui/x-data-grid": "^5.12.1",
-    "@refinedev/cli": "^2.1.2",
-    "@refinedev/core": "^4.5.8",
-    "@refinedev/inferencer": "^3.1.4",
-    "@refinedev/kbar": "^1.1.0",
-    "@refinedev/mui": "^4.5.8",
-    "@refinedev/react-hook-form": "^4.1.2",
-    "@refinedev/react-router-v6": "^4.1.0",
-    "@refinedev/simple-rest": "^4.0.0",
+    "@pankod/refine-cli": "^1.2.0",
+    "@pankod/refine-core": "^3.18.0",
+    "@pankod/refine-inferencer": "^2.0.2",
+    "@pankod/refine-mui": "^3.30.0",
+    "@pankod/refine-react-hook-form": "^3.27.1",
+    "@pankod/refine-react-router-v6": "^3.18.0",
+    "@pankod/refine-simple-rest": "^3.18.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
     "apexcharts": "^3.37.3",
     "axios": "^0.26.1",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "^18.0.0",
-    "react-hook-form": "^7.30.0",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.0",
+    "web-vitals": "^1.1.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^14.1.1",
-    "@types/jest": "^29.2.4",
-    "@types/node": "^12.20.11",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "typescript": "^4.7.4",
-    "web-vitals": "^1.1.1"
+    "@types/node": "^12.20.10",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "dev": "refine start",
